corrected error in link in table in dark mode

--- a/assets/sass/_dark-style.sass
+++ b/assets/sass/_dark-style.sass
@@ -26,3 +26,7 @@
     tbody tr:nth-child(even) td,
     tbody tr:nth-child(even) th
         background-color: #878787
+    td a, th a
+        color: $secondary
+        &:hover
+            color: $secondary!important
